--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     
     <% console.log(posts); %>
 
-    <% for(var i=0; < posts.length; i++) { %>
+    <% for(var i=0; i< posts.length; i++) { %>
     <% console.log(posts[i].title); %>
    <% }; %>
 
