--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,11 +3,14 @@
     <h1>Home</h1>
     <p> <%= homeStartingContent %> </p>
     
-    <% console.log(posts); %>
+    <%# koden under her er for å rendere det skriver i compose siden for å skirve på index.html %>
 
-    <% for(var i=0; i< posts.length; i++) { %>
-    <% console.log(posts[i].title); %>
-   <% }; %>
+    <% posts.forEach(function(post){ %>
+      <h1> <%= post.title %> </h1>
+      <p><%= post.content %></p>
+    <% }) %>
+
+    
 
 <%-include("partials/footer.ejs");-%>
 
