--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
     <% posts.forEach(function(post){ %>
       <h1> <%= post.title %> </h1>
       <p><%= post.content.substring(0, 100) + " ..."%></p>
+      <a href="/posts/<%=post.title%>">Read More</a>
     <% }) %>
 
     
